# bis

./: .gitignore  ANALYSIS_SUMMARY.md  CLAUDE.md  COMPREHENSIVE_60FPS_PATCH.md  CRITICAL_TESTING_GAP.md  CURRENT_STATE.md  DEEP_RUNTIME_ANALYSIS_PLAN.md  DIAGNOSIS.md  DYNAMIC_ANALYSIS_FINDINGS.md  DYNAMIC_ANALYSIS_IMPROVEMENTS.md  DYNAMIC_ANALYSIS_RESULTS.md  EMULATOR_TEST_PLAN.md  FILE_REFERENCE.md  FINAL_ANALYSIS.md  FINAL_STATUS.md  FINDINGS_AND_NEXT_STEPS.md  FPS_CANDIDATES_FOUND.md  FPS_VERIFICATION.md  GDB_APPROACH.md  GRINDING_RESULTS.md  IMPLEMENTATION_STATUS.md  NEXT_INVESTIGATION.md  OPTION2_COMPLETE.md  PLAN_COMPLETION_SUMMARY.md  QUICK_START_DYNAMIC_ANALYSIS.md  README.md  STATUS.md  STATUS_AND_OPTIONS.md  TESTING_GUIDE.md  config.toml  launch.sh  test_all_patches.sh  test_fps.sh
cheats/: 00040000001D1400.txt
ghidra-mcp-server/: README.md  pyproject.toml
ghidra-mcp-server/src/ghidra_mcp_server/: __init__.py  server.py
ghidra_analysis/: analyze_context.py  analyze_fps.py  analyze_fps_addresses.py  find_fps.py  find_fps_reads.py  force_disasm.py  thumb_analysis.py  trace_fps_context.py
ghidra_scripts/: analyze_fps_functions.py  deep_fps_analysis.py  find_fps_control.py  find_fps_patch.py  fps_address_finder.py  fps_target_analysis.py  gsp_frame_analysis.py  targeted_fps_analysis.py
patches/: 60fps.ips  60fps_all_modules.ips  60fps_float_v28.ips  60fps_float_v29.ips  60fps_test1.ips  60fps_test2.ips  60fps_test3.ips  60fps_test4.ips  60fps_test5.ips  60fps_v10.ips  60fps_v10a.ips  60fps_v10b.ips  60fps_v11.ips  60fps_v11b.ips  60fps_v12.ips  60fps_v3.ips  (+29 more)
(+13 files in other folders)
