[project]
name = "ghidra-mcp-server"
version = "0.1.0"
description = "MCP server for Ghidra headless analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
ghidra-mcp-server = "ghidra_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ghidra_mcp_server"]
